Fully Functional Application
Only thing left to do is improve printing and add a view option for the
models

--- a/Components/patientcombobox.ui
+++ b/Components/patientcombobox.ui
@@ -32,7 +32,23 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
-   <item row="0" column="2">
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="placeholderText">
+      <string>Search</string>
+     </property>
+     <property name="clearButtonEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
     <widget class="QPushButton" name="refreshButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -48,19 +64,16 @@
    <item row="0" column="0">
     <widget class="QComboBox" name="comboBox"/>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEdit">
+   <item row="0" column="2">
+    <widget class="QPushButton" name="newButton">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="placeholderText">
-      <string>Search</string>
-     </property>
-     <property name="clearButtonEnabled">
-      <bool>true</bool>
+     <property name="text">
+      <string>New</string>
      </property>
     </widget>
    </item>
