--- a/Components/hospitalcombobox.ui
+++ b/Components/hospitalcombobox.ui
@@ -32,10 +32,7 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
-    <widget class="QComboBox" name="comboBox"/>
-   </item>
-   <item row="0" column="2">
+   <item row="0" column="3">
     <widget class="QPushButton" name="refreshButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -47,6 +44,9 @@
       <string>Refresh</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QComboBox" name="comboBox"/>
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEdit">
@@ -61,6 +61,22 @@
      </property>
      <property name="clearButtonEnabled">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="newButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>New</string>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
