--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,6 +73,7 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionEdit_User"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -85,6 +86,11 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionEdit_User">
+   <property name="text">
+    <string>Edit User</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
