--- a/interventionmanager.ui
+++ b/interventionmanager.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>437</width>
     <height>300</height>
    </rect>
   </property>
@@ -29,7 +29,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>View</string>
+         <string>View/Print</string>
         </property>
        </widget>
       </item>
